# ziyou-python-write-ups

./: .flake8  .gitignore  .gitmodules  LICENSE  Makefile  README.md  elegantbook.cls  pyproject.toml
.github/workflows/: lint.yaml
docs/: main.tex
docs/chapters/: ch01.tex  ch02.tex  ch03.tex  ch04.tex  ch05.tex  ch06.tex
src/ch01/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py
src/ch02/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
src/ch03/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py
src/ch04/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py  30.py  31.py
src/ch05/: 01.py  02.py  03.py  04.py  09.py  10.py  12.py  14.py  15.py
src/ch06/: 01.py  02.py  03.py  04.py  05.py  06.py  08.py
