[tool.poetry]
name = "ziyou-python-write-ups"
version = "0.9.0"
description = "Student write-ups for Ziyou Python courses"
authors = ["MCL <mcl@math.ncu.edu.tw>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
numpy = "^1.24.0"
scipy = "^1.9.3"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-bugbear = "^22.12.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"


